fixed basic playlist layout issues

--- a/modules/EmbedPlayer/resources/skins/EmbedPlayer.css
+++ b/modules/EmbedPlayer/resources/skins/EmbedPlayer.css
@@ -95,7 +95,7 @@
 	padding: 5px;
 }
 .ui-widget-content a {
-	color: #222;
+	color: #777;
 }
 
 ul.ui-provider-selection {
